logs/scheduler/2024-03-03/example.py.log
[2024-03-03T08:14:47.753+0000] {processor.py:161} INFO - Started process (PID=588) to work on /opt/airflow/dags/example.py
[2024-03-03T08:14:47.754+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/example.py for tasks to queue
[2024-03-03T08:14:47.757+0000] {logging_mixin.py:188} INFO - [2024-03-03T08:14:47.756+0000] {dagbag.py:540} INFO - Filling up the DagBag from /opt/airflow/dags/example.py
[2024-03-03T08:14:47.760+0000] {logging_mixin.py:188} INFO - [2024-03-03T08:14:47.759+0000] {dagbag.py:350} ERROR - Failed to import: /opt/airflow/dags/example.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/dagbag.py", line 346, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/opt/airflow/dags/example.py", line 76
    [docs]    t1 = BashOperator(
    ^
IndentationError: expected an indented block after 'with' statement on line 40
[2024-03-03T08:14:47.761+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/example.py
[2024-03-03T08:14:47.779+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/example.py took 0.028 seconds
[2024-03-03T08:15:18.447+0000] {processor.py:161} INFO - Started process (PID=644) to work on /opt/airflow/dags/example.py
[2024-03-03T08:15:18.448+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/example.py for tasks to queue
[2024-03-03T08:15:18.452+0000] {logging_mixin.py:188} INFO - [2024-03-03T08:15:18.451+0000] {dagbag.py:540} INFO - Filling up the DagBag from /opt/airflow/dags/example.py
[2024-03-03T08:15:18.458+0000] {logging_mixin.py:188} INFO - [2024-03-03T08:15:18.457+0000] {dagbag.py:350} ERROR - Failed to import: /opt/airflow/dags/example.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/dagbag.py", line 346, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/opt/airflow/dags/example.py", line 76
    [docs]    t1 = BashOperator(
    ^
IndentationError: expected an indented block after 'with' statement on line 40
[2024-03-03T08:15:18.459+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/example.py
[2024-03-03T08:15:18.473+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/example.py took 0.031 seconds
[2024-03-03T08:15:49.401+0000] {processor.py:161} INFO - Started process (PID=700) to work on /opt/airflow/dags/example.py
[2024-03-03T08:15:49.402+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/example.py for tasks to queue
[2024-03-03T08:15:49.406+0000] {logging_mixin.py:188} INFO - [2024-03-03T08:15:49.405+0000] {dagbag.py:540} INFO - Filling up the DagBag from /opt/airflow/dags/example.py
[2024-03-03T08:15:49.411+0000] {logging_mixin.py:188} INFO - [2024-03-03T08:15:49.410+0000] {dagbag.py:350} ERROR - Failed to import: /opt/airflow/dags/example.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/dagbag.py", line 346, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/opt/airflow/dags/example.py", line 76
    [docs]    t1 = BashOperator(
    ^
IndentationError: expected an indented block after 'with' statement on line 40
[2024-03-03T08:15:49.412+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/example.py
[2024-03-03T08:15:49.426+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/example.py took 0.031 seconds
[2024-03-03T08:16:20.067+0000] {processor.py:161} INFO - Started process (PID=756) to work on /opt/airflow/dags/example.py
[2024-03-03T08:16:20.069+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/example.py for tasks to queue
[2024-03-03T08:16:20.073+0000] {logging_mixin.py:188} INFO - [2024-03-03T08:16:20.072+0000] {dagbag.py:540} INFO - Filling up the DagBag from /opt/airflow/dags/example.py
[2024-03-03T08:16:20.079+0000] {logging_mixin.py:188} INFO - [2024-03-03T08:16:20.078+0000] {dagbag.py:350} ERROR - Failed to import: /opt/airflow/dags/example.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/dagbag.py", line 346, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/opt/airflow/dags/example.py", line 76
    [docs]    t1 = BashOperator(
    ^
IndentationError: expected an indented block after 'with' statement on line 40
[2024-03-03T08:16:20.080+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/example.py
[2024-03-03T08:16:20.098+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/example.py took 0.037 seconds
[2024-03-03T08:16:50.859+0000] {processor.py:161} INFO - Started process (PID=812) to work on /opt/airflow/dags/example.py
[2024-03-03T08:16:50.861+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/example.py for tasks to queue
[2024-03-03T08:16:50.867+0000] {logging_mixin.py:188} INFO - [2024-03-03T08:16:50.866+0000] {dagbag.py:540} INFO - Filling up the DagBag from /opt/airflow/dags/example.py
[2024-03-03T08:16:50.875+0000] {logging_mixin.py:188} INFO - [2024-03-03T08:16:50.873+0000] {dagbag.py:350} ERROR - Failed to import: /opt/airflow/dags/example.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/dagbag.py", line 346, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/opt/airflow/dags/example.py", line 76
    [docs]    t1 = BashOperator(
    ^
IndentationError: expected an indented block after 'with' statement on line 40
[2024-03-03T08:16:50.876+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/example.py
[2024-03-03T08:16:50.895+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/example.py took 0.050 seconds
[2024-03-03T08:17:21.403+0000] {processor.py:161} INFO - Started process (PID=868) to work on /opt/airflow/dags/example.py
[2024-03-03T08:17:21.405+0000] {processor.py:830} INFO - Processing file /opt/airflow/dags/example.py for tasks to queue
[2024-03-03T08:17:21.409+0000] {logging_mixin.py:188} INFO - [2024-03-03T08:17:21.408+0000] {dagbag.py:540} INFO - Filling up the DagBag from /opt/airflow/dags/example.py
[2024-03-03T08:17:21.414+0000] {logging_mixin.py:188} INFO - [2024-03-03T08:17:21.413+0000] {dagbag.py:350} ERROR - Failed to import: /opt/airflow/dags/example.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/dagbag.py", line 346, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/opt/airflow/dags/example.py", line 76
    [docs]    t1 = BashOperator(
    ^
IndentationError: expected an indented block after 'with' statement on line 40
[2024-03-03T08:17:21.415+0000] {processor.py:842} WARNING - No viable dags retrieved from /opt/airflow/dags/example.py
[2024-03-03T08:17:21.430+0000] {processor.py:183} INFO - Processing /opt/airflow/dags/example.py took 0.033 seconds
